--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
             <span>
                 
                 <a href="https://beian.miit.gov.cn/" target="_blank" rel="nofollow">粤ICP备19002199号</a><br>
-		    		    <a href="https://www.linusseo.com/" rel="nofollow">Linus谷歌SEO</a><br>
+		    		    <a href="https://www.linusseo.com/">Linus谷歌SEO</a><br>
                 Power by <a href="http://hexo.io/" target="_blank"  rel="nofollow">Hexo</a> Theme <a href="https://github.com/yscoder/hexo-theme-indigo" target="_blank" rel="nofollow">indigo</a>
 
 		    
